fix: layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,13 @@
   padding: 24px 48px;
 }
 
+@media (max-width: 800px) {
+  .form_row {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 .fruit_row {
   display: flex;
   justify-content: flex-start;
